--- a/vars/PipelineWithClosure.template
+++ b/vars/PipelineWithClosure.template
@@ -1,10 +1,11 @@
 import com.jenkins.*
 
 def call(Closure body) {
-    // ingest configs from jobs
+    // ingest configs from job's Closure
     LinkedHashMap config = [:]
     body.resolveStrategy = Closure.DELEGATE_FIRST
     body.delegate = config
     body()
+
     // inject your pipeline here
 }
